# osubot-rs

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  osubot.example.toml  rustfmt.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-报告.md  功能请求.md
.github/workflows/: check.yml  ci.yml
.omo/run-continuation/: ses_149bd2824ffetM1vJG731AdRqW.json  ses_149cbc5d0ffeoGh1Sr8JNuUYYo.json  ses_149df4ab5ffecB13az8XBVHltk.json
.opencode/plans/: 2026-05-23-render-concurrency-hardening-fixes.md
docs/: commands.md  database.md  plugin-development.md  scheduler.md
docs/decisions/: 2026-06-22-plugin-sdk-keeps-osubot-game-mode.md
docs/superpowers/plans/: 2026-05-18-osu查分机器人实现计划.md  2026-05-18-排名变化系统实现计划.md
docs/superpowers/specs/: 2026-05-18-osu查分机器人设计.md
examples/hello-plugin/: Cargo.toml
examples/hello-plugin/src/: lib.rs
osubot/: Cargo.toml
osubot-beatmap-preview/: Cargo.toml  LICENSE  README.md
osubot-beatmap-preview/assets/: skin.ini
osubot-beatmap-preview/src/: canvas.rs  composer.rs  digits.rs  errors.rs  gif_common.rs  legacy_random.rs  lib.rs  models.rs  mods.rs  parser.rs  skin.rs  slider_path.rs  text.rs  time_selection.rs
osubot-beatmap-preview/src/catch/: constants.rs  drawing.rs  gif.rs  mod.rs  objects.rs  png.rs
osubot-beatmap-preview/src/convert/: catch_conv.rs  mania_conv.rs  mod.rs  taiko_conv.rs
osubot-beatmap-preview/src/convert/mania/: circle.rs  mod.rs  slider.rs  spinner.rs
osubot-beatmap-preview/src/mania/: constants.rs  gif.rs  mod.rs  png.rs  skin.rs
osubot-beatmap-preview/src/standard/: alpha.rs  constants.rs  context.rs  gif.rs  mod.rs  objects.rs  slider.rs
osubot-beatmap-preview/src/taiko/: constants.rs  gif.rs  mod.rs  notes.rs  png.rs  timing.rs
osubot-core/: Cargo.toml
osubot-core/src/: api.rs  cache.rs  commands.rs  dedup.rs  filter.rs  handler.rs  highlight.rs  irc.rs  lib.rs  rate_limiter.rs  response.rs  ssrf.rs  storage.rs  strings.rs  time_parser.rs  types.rs  upstream.rs  ur.rs
osubot-core/src/api/: beatmap.rs  beatmap_attrs.rs  http.rs  match_api.rs  mod.rs  oauth.rs  osu_api.rs  pp.rs  sb_api.rs  sb_convert.rs  score_convert.rs  stable_grade.rs
osubot-core/src/commands/: common.rs  mod.rs  scoring.rs
osubot-core/src/commands/tests/: bind.rs  common.rs  match_listen.rs  mod.rs  profile.rs  query.rs  rv.rs  sb.rs  scoring.rs
osubot-core/tests/: pp_breakdown.rs
osubot-game-mode/: Cargo.toml
osubot-game-mode/src/: lib.rs
osubot-plugin/: Cargo.toml
osubot-plugin-sdk/: Cargo.toml
osubot-plugin-sdk/src/: lib.rs  types.rs
osubot-plugin/src/: bridge.rs  config.rs  dispatch.rs  instance.rs  lib.rs  lifecycle.rs  manager.rs  path.rs  reload.rs  types.rs
osubot-render/: Cargo.toml
osubot-render/src/: cache.rs  convert.rs  encode.rs  error.rs  font.rs  lib.rs  match_style.rs  pp_calc.rs  render.rs  score_list_style.rs  score_style.rs  style.rs  svg_css.rs  svg_score_card.rs  template.rs
osubot-render/src/score_panel_html/: builder.rs  mod.rs  style.rs
osubot-render/styles/: match.css  profile.css  score.css  score_list.css  score_panel.css
osubot-render/templates/: _macros.html  profile.html  score.html  score_list.html
osubot-render/tests/: dump_html.rs  dump_profile_html.rs  render_inline_svg.rs  render_match_card.rs  ssrf_guard.rs
osubot-render/tests/dump/: score-fruits.html  score-list.html  score-mania.html  score-osu.html  score-taiko.html
osubot-tui/: Cargo.toml
osubot-tui/src/: app.rs  main.rs
osubot-types/: Cargo.toml
osubot-types/src/: lib.rs
osubot/src/: app_state.rs  background.rs  command.rs  config.rs  constants.rs  last_beatmap_cache.rs  main.rs  onebot.rs  plugin_runtime.rs  reload.rs  runtime.rs  scheduler.rs  score_filter.rs  score_query.rs  shutdown.rs  ws_loop.rs  xfs_upstream.rs  yumu_upstream.rs
osubot/src/command/: beatmap_audio.rs  beatmap_preview.rs  match_listen.rs  mod.rs  query.rs  settings.rs  utility.rs
osubot/src/match_listener/: mod.rs  notify.rs  poller.rs  state.rs
osubot/src/score_query/: audio.rs  mod.rs  plan.rs  preview.rs  render.rs
scripts/: migrate_to_user_id.sql
