[package]
name = "osubot-core"
version = "0.1.0"
edition = "2021"

# [lints.clippy]
# deny = ["all"]
# allow = ["clippy::derive_partial_eq_without_eq"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
once_cell = "1"
itoa = "1"

[dev-dependencies]
tokio-test = "0.4"