[package]
name = "osubot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rand = "0.8"
tracing = "0.1"
futures = "0.3"
osubot-types = { path = "../osubot-types" }
rosu-pp = "4"
rosu-mods = { version = "0.4", features = ["serde"] }
rosu-replay = "0.2"
bytes = "1"
dirs = "6"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"