[package]
name = "osubot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "fs", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
turso = "0.6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
rand = "0.10"
tracing = "0.1"
futures = "0.3"
osubot-types = { path = "../osubot-types" }
osubot-game-mode = { path = "../osubot-game-mode", features = ["rosu-conversions"] }
rosu-pp = "4"
rosu-mods = { version = "0.4", features = ["serde"] }
bytes = "1"
dirs = "6"
liblzma = "0.4"
phf = { version = "0.13", features = ["macros"] }
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"