[package]
name = "osubot"
version = "0.1.0"
edition = "2021"

[dependencies]
osubot-core = { path = "../osubot-core" }
osubot-render = { path = "../osubot-render" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
image = "0.25"
dashmap = "6"
async-trait = "0.1"
rand = "0.8"

[features]
integration-tests = []
